WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174937
Fix typo in scrollPositionChangedViaDelegatedScrolling
https://bugs.webkit.org/show_bug.cgi?id=174937
Summary
Fix typo in scrollPositionChangedViaDelegatedScrolling
Frédéric Wang Nélar
Reported
2017-07-28 07:35:17 PDT
s/inUserInteration/inUserInteraction/
Attachments
Patch
(6.27 KB, patch)
2017-07-28 07:39 PDT
,
Frédéric Wang Nélar
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2017-07-28 07:39:25 PDT
Created
attachment 316638
[details]
Patch
Wenson Hsieh
Comment 2
2017-07-28 08:21:47 PDT
Comment on
attachment 316638
[details]
Patch rs=me
Frédéric Wang Nélar
Comment 3
2017-07-28 08:38:13 PDT
Committed
r220001
: <
http://trac.webkit.org/changeset/220001
>
Radar WebKit Bug Importer
Comment 4
2017-07-28 12:36:25 PDT
<
rdar://problem/33596070
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug