Fix typo in scrollPositionChangedViaDelegatedScrolling https://bugs.webkit.org/show_bug.cgi?id=174937

Patch by Frederic Wang <fwang@igalia.cpm> on 2017-07-28
Reviewed by Wenson Hsieh.

Source/WebCore:

No new tests, fix typo in the inUserInteraction parameter.

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::scrollPositionChangedViaDelegatedScrolling):
* page/scrolling/ScrollingTree.h:

Source/WebKit:

* UIProcess/Scrolling/ios/ScrollingTreeOverflowScrollingNodeIOS.h:
* UIProcess/Scrolling/ios/ScrollingTreeOverflowScrollingNodeIOS.mm:
(WebKit::ScrollingTreeOverflowScrollingNodeIOS::scrollViewDidScroll):

Canonical link: https://commits.webkit.org/191730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220001 268f45cc-cd09-0410-ab3c-d52691b4dbfc